# vqa-chest

./: README.md  env.yaml  install-pyenv-win.ps1  pyproject.toml
config/: local.yaml
data/04-predictions/: baseline_test_predictions.csv
entrypoint/: train.py
notebooks/: Baseline.ipynb  experiment1_backbone.ipynb
src/: utils.py
src/pipelines/: feature_eng_pipeline.py  training_pipeline.py
src/vqa_chest/: __init__.py
